force-app/main/default/objects/MP_Payment__c/MP_Payment__c.object-meta.xml
<CustomObject>
    <label>MP Payment</label>
    <nameField>
        <label>MP Payment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>