force-app/main/default/objects/MP_Payment__c/fields/Card_Bin__c.field-meta.xml
<CustomField>
    <fullName>Card_Bin__c</fullName>
    <label>Card_Bin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>