force-app/main/default/objects/MP_Payment__c/fields/Card_Cardholder_Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Cardholder_Identification_Type__c</fullName>
    <label>Card Cardholder Identification Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>