force-app/main/default/objects/MP_Payment__c/fields/Card_Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Cardholder_Name__c</fullName>
    <label>Card Cardholder Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>