force-app/main/default/objects/MP_Payment__c/fields/Card_Country__c.field-meta.xml
<CustomField>
    <fullName>Card_Country__c</fullName>
    <label>Card Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>