force-app/main/default/objects/MP_Payment__c/fields/Card_Date_Created_DT__c.field-meta.xml
<CustomField>
    <fullName>Card_Date_Created_DT__c</fullName>
    <label>Card Date Created DT</label>
    <type>DateTime</type>
</CustomField>