force-app/main/default/objects/MP_Payment__c/fields/Card_Date_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Card_Date_Last_Updated__c</fullName>
    <label>Card Date Last Updated</label>
    <length>40</length>
    <type>Text</type>
</CustomField>