force-app/main/default/objects/MP_Payment__c/fields/Card_Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Month__c</fullName>
    <label>Card Expiration Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>