force-app/main/default/objects/MP_Payment__c/fields/Card_Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Year__c</fullName>
    <label>Card Expiration Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>