force-app/main/default/objects/MP_Payment__c/fields/Card_First_Six_Digits__c.field-meta.xml
<CustomField>
    <fullName>Card_First_Six_Digits__c</fullName>
    <label>Card First Six Digits</label>
    <length>10</length>
    <type>Text</type>
</CustomField>