force-app/main/default/objects/MP_Payment__c/fields/Collector_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Collector_Account_Name__c</fullName>
    <label>Collector Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>