force-app/main/default/objects/MP_Payment__c/fields/Collector_Id__c.field-meta.xml
<CustomField>
    <fullName>Collector_Id__c</fullName>
    <label>Collector ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>