force-app/main/default/objects/MP_Payment__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <label>Date Approved</label>
    <length>40</length>
    <type>Text</type>
</CustomField>