force-app/main/default/objects/MP_Payment__c/fields/Date_Approved_DT__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_DT__c</fullName>
    <label>Date Approved DT</label>
    <type>DateTime</type>
</CustomField>