force-app/main/default/objects/MP_Payment__c/fields/Date_Created_DT__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_DT__c</fullName>
    <label>Date Created DT</label>
    <type>DateTime</type>
</CustomField>