force-app/main/default/objects/MP_Payment__c/fields/Date_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Updated__c</fullName>
    <label>Date Last Updated</label>
    <length>40</length>
    <type>Text</type>
</CustomField>