force-app/main/default/objects/MP_Payment__c/fields/Date_Last_Updated_DT__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Updated_DT__c</fullName>
    <label>Date Last Updated DT</label>
    <type>DateTime</type>
</CustomField>