force-app/main/default/objects/MP_Payment__c/fields/MP_Subscription__c.field-meta.xml
<CustomField>
    <fullName>MP_Subscription__c</fullName>
    <label>MP Subscription</label>
    <referenceTo>MP_Subscription__c</referenceTo>
    <relationshipLabel>MP Payments</relationshipLabel>
    <relationshipName>MP_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>