force-app/main/default/objects/MP_Payment__c/fields/Net_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Received_Amount__c</fullName>
    <label>Net Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>