force-app/main/default/objects/MP_Payment__c/fields/Payer_Email__c.field-meta.xml
<CustomField>
    <fullName>Payer_Email__c</fullName>
    <label>Payer Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>