force-app/main/default/objects/MP_Payment__c/fields/Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID__c</fullName>
    <label>Payer ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>