force-app/main/default/objects/MP_Payment__c/fields/Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Payment Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>