force-app/main/default/objects/MP_Payment__c/fields/Payment_Method_Issuer_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Issuer_Id__c</fullName>
    <label>Payment Method Issuer Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>