force-app/main/default/objects/MP_Payment__c/fields/Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Type__c</fullName>
    <label>Payment Method Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>