force-app/main/default/objects/MP_Payment__c/fields/Subscription_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Sequence_Number__c</fullName>
    <label>Subscription Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>