force-app/main/default/objects/MP_Payment__c/fields/Subscription_Sequence_Total__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Sequence_Total__c</fullName>
    <label>Subscription Sequence Total</label>
    <length>40</length>
    <type>Text</type>
</CustomField>