force-app/main/default/objects/MP_Payment__c/fields/Transaction_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Billing_Date__c</fullName>
    <label>Transaction Billing Date</label>
    <length>40</length>
    <type>Text</type>
</CustomField>